--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
     <artifactId>argos</artifactId>
     <version>1.0-SNAPSHOT</version>
     <name>argos</name>
+    <packaging>jar</packaging>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -62,6 +63,7 @@
             <artifactId>text-io</artifactId>
             <version>3.4.1</version>
         </dependency>
+
     </dependencies>
 
     <build>
